[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkedup-polymarket-bot"
version = "0.1.0"
description = "Asynchronous Polymarket scanning & trading bot"
authors = [{ name = "InkedUp", email = "dev@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["polymarket", "trading", "bot", "async"]

[project.scripts]
inkedup-bot = "inkedup_bot.cli:app"

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
addopts = []
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests", 
    "unit: marks tests as unit tests",
    "acceptance: marks tests as acceptance tests",
    "smoke: marks tests as smoke tests for quick validation",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.coverage.run]
source = ["inkedup_bot"]
omit = [
    "*/tests/*",
    "*/migrations/*", 
    "*/.venv/*",
    "*/__pycache__/*",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "py_clob_client.*",
    "websockets.*", 
    "aioredis.*",
    "locust.*",
]
ignore_missing_imports = true
